# XClock

./: .gitignore  .readthedocs.yml  CHANGELOG.md  DaqDevice.py  LICENSE  README.md  daq_device.py  dummy_daq_device.py  errors.py  labjack_devices.py  main.py  nidaq_draft.py  pyproject.toml  trigger_lua_script.py
.github/workflows/: python-tests.yml
docs/: make.bat  requirements.txt
docs/source/: conf.py  index.md
docs/source/_static/: custom.css
docs/source/api/: devices.md  edge_detection.md  errors.md
docs/source/developer/: adding_devices.md  architecture.md  contributing.md
docs/source/user/: cli.md  devices.md  gui.md  installation.md  quickstart.md
drafts/: labjack_async_streamer.py  labjack_stream_digin.py
examples/: labjack_examples.py  labjack_t4.py
resources/: labjack_t4_wiring.afdesign  logo.afdesign  logo.afdesign~lock~
src/cli/: __init__.py  main.py
src/gui/: __init__.py  launcher.py  main.py
src/xclock/: __init__.py  dummy_daq_device.py  edge_detection.py  errors.py  labjack_devices.py
src/xclock/devices/: __init__.py  daq_device.py  dummy_daq_device.py  labjack_devices.py  labjack_u3.py
tests/xclock/: test_dummy_device.py  test_edge_detection.py  test_labjack.py  test_labjack_rollover.py  test_labjack_u3.py
